gitops-gateway/management-cluster/management-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: harbor.podzone.cloud
    name: harbor-podzone-cloud-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - hostname: harbor.podzone.cloud
    name: harbor-podzone-cloud
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: harbor-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: management-network.podzone.cloud
    name: management-network-podzone-cloud-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - hostname: management-network.podzone.cloud
    name: management-network-podzone-cloud
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: management-network-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: management-disk.podzone.cloud
    name: management-disk-podzone-cloud-http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - hostname: management-disk.podzone.cloud
    name: management-disk-podzone-cloud
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: management-disk-secret
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - management-network.podzone.cloud
  parentRefs:
  - name: gateway
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
